manifests/applications/influxdb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: influx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-deployment
  namespace: influx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
       - name: influxdb
         image: influxdb:2
         args:
           - --reporting-disabled
         ports:
           - containerPort: 8086
         volumeMounts:
           - name: influxdb-data
             mountPath: /var/lib/influxdb2
      volumes:
       - name: influxdb-data
         persistentVolumeClaim:
           claimName: influxdb-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  namespace: influx
spec:
  selector:
    app: influxdb
  ports:
   - protocol: TCP
     port: 8086
     targetPort: 8086
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: influx
spec:
  ingressClassName: kong
  rules:
    - host: influx.hnatekmar.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: influxdb-service
                port:
                  number: 8086
